fix website on mobile

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,9 +22,12 @@
 }
 
 /* TODO O CODIGO */
-*{
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* BODY DA PAGINA */
@@ -51,30 +54,10 @@ body {
 /* SECTION */
 .apresentacao__conteudo{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   text-align: center;
   align-items: flex-start;
   gap: 2em;
-  margin: 0em 0em 1em 0em;
-}
-
-.apresentacao__about{
-  margin: 5% 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  gap: 100px;
-}
-
-.apresentacao__conteudo__about{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    gap: 2em;
-    margin: 0em 0em 3em 0em;
 }
 
 .apresentacao__conteudo__conteudo{
@@ -86,9 +69,9 @@ body {
 
 /* TITULO DO CONTEUDO */
 .apresentacao__conteudo__titulo{
-  margin: 0em 0em 1em 0em;
+  margin: 1em 0em 1em 0em;
   font-family: var(--fonte-primaria);
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   text-align: left;
 }
 
@@ -103,7 +86,7 @@ body {
   font-family: var(--fonte-secundaria);
   text-align: justify;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.0rem;
 }
 
 .tech-stack{
@@ -112,7 +95,7 @@ body {
   font-family: var(--fonte-secundaria);
   text-align: left;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.0rem;
   line-height: 2.2em;
 }
 
@@ -128,7 +111,7 @@ body {
 /* DIV PAI DOS BOTOES */
 .apresentacao__links{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   gap: 32px;
   justify-content: space-between;
@@ -139,15 +122,7 @@ body {
   color: var(--cor-secundaria);
   font-family: var(--fonte-secundaria);
   text-align: center;
-  text-decoration: none;
   font-size: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.apresentacao__links__paragrafo{
-  text-decoration: underline;
 }
 
 .apresentacao__links__link:hover{
@@ -159,16 +134,6 @@ body {
   font-family: var(--fonte-primaria);
   font-size: 1.3rem;
   font-weight: 400;
-}
-
-.apresentacao__links__link__img{
-  height: 35px;
-  width: 32px;
-}
-
-.apresentacao__imagem{
-  width: 50%;
-  margin: 0em 0em 1em 0em;
 }
 
 /* IMAGEM */
@@ -190,9 +155,6 @@ body {
   font-size: 1.75rem;
   color: var(--cor-secundaria);
 }
-
-
-
 
 @media (min-width: 900px){
 
